k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productservice
  namespace: develop
  labels:
    app: productservice
spec:
  type: ClusterIP
  selector:
    app: productservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
